Jan 22 2003  2.9.0  Hopefilly nipped speech/sound doubling bug.
                    Happy linux world!
Jan 19 2003  2.9.0  Added support for 802.11a (152-bit) WEP
Jan 16 2003  2.9.0  Updated expat.cc to handle the 'carrier' attribute
Jan 15 2003  2.9.0  Fixed up netxml more
                    Added logging of client maxrate to netxml
                    Merged GPSMap patch from Anton Rager to do power level
                     coloring for scatter plots (-a -q#).
                    Fixed multiserver support for string dumps, fixed string
                     dump scrolling, added timestamping to string dumps.
                    Fixed 'x' and 'X' not closing some panel windows.
Jan 11 2003  2.9.0  Cleaned up MungeToShell to be more restrictive for passing
                     text to Festival.
                    Merged metric display patch from Peter Sturm
Jan 10 2003  2.9.0  Added carrier to network and netxml
Jan 07 2003  2.9.0  Added support for 802.11a (ar5k cardtype, via Reyk Floeters
                     drivers at http://team.vantronix.net/ar5k/.  Make sure you
                     upgrade your linux-wireless-tools to version 25 or you 
                     will not be able to place the card into monitor mode.)
                    Added network carrier classification (802.11, 11b, 11a,
                     etc)
                    Fixed oversight in netxml which didn't log client MAC
                     addresses.
Jan 02 2003  2.9.0  Fixed missing test of opendir() failing for ACPI
Jan 01 2003  2.9.0  Zero GREP_OPTIONS environment variable in the scripts
Dec 30 2002  2.9.0  Fixed minor error in the client netxml block (Ray Essick)
Dec 29 2002  2.8.0b Fixed another stupid set of oversights and released 2.8.0b
Dec 29 2002  2.8.0a Released 2.8.0a with minor bugfixes and updates.

Dec 29 2002  2.9.0  Fixed default Zaurus config
                    Added unlinking of kismet_curses to the install target